rusty_lr/tests/ui/context_clone_non_clone_storage_fails.stderr
error[E0277]: the trait bound `NotClone: Clone` is not satisfied
  --> tests/ui/context_clone_non_clone_storage_fails.rs:15:20
   |
15 |     assert_clone::<SContext>();
   |                    ^^^^^^^^ the trait `Clone` is not implemented for `NotClone`
   |
note: required for `__RustyLRData<NotClone>` to implement `Clone`
  --> tests/ui/context_clone_non_clone_storage_fails.rs:5:1
   |
 5 | / lr1! {
 6 | |     %tokentype char;
 7 | |     %start S;
...  |
10 | | }
   | |_^ type parameter would need to implement `Clone`
   = help: consider manually implementing `Clone` to avoid undesired bounds
   = note: 1 redundant requirement hidden
   = note: required for `rusty_lr::parser::deterministic::Context<Parser, __RustyLRData<NotClone>, SExtracter, u8>` to implement `Clone`
note: required by a bound in `assert_clone`
  --> tests/ui/context_clone_non_clone_storage_fails.rs:12:20
   |
12 | fn assert_clone<T: Clone>() {}
   |                    ^^^^^ required by this bound in `assert_clone`
help: consider annotating `NotClone` with `#[derive(Clone)]`
   |
 3 + #[derive(Clone)]
 4 | struct NotClone;
   |
